--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Cars Show App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div>
+      <div class="models-selection">
+        <ul id="models-names">
+          <li class="model-banner">Models</li>
+        </ul>
+      </div>
+      <div class="arrows-wrapper">
+        <button class="left" id="left-car-switch"><i class="fa-solid fa-angle-left"></i></button>
+        <button class="right" id="right-car-switch"><i class="fa-solid fa-angle-right"></i></button>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
